@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.24 2007/02/27 12:50:13 wiz Exp $
+# $NetBSD: Makefile,v 1.25 2007/03/01 12:56:25 wiz Exp $
 #
 
-DISTNAME=	Template-Toolkit-2.15
+DISTNAME=	Template-Toolkit-2.19
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 SVR4_PKGNAME=	p5tto
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Template/}
