@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1305 2007/06/09 23:48:07 abs Exp $
+$NetBSD: CHANGES-2007,v 1.1306 2007/06/09 23:49:31 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2517,3 +2517,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated time/p5-DateTime to 0.37 [abs 2007-06-10]
 	Updated time/p5-DateTime-Locale to 0.34 [abs 2007-06-10]
 	Updated time/p5-DateTime-TimeZone to 0.6602 [abs 2007-06-10]
+	Updated www/p5-Template-Toolkit to 2.19 [abs 2007-06-10]
